--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
     "start": "node server.js",
-    "dev": "webpack-dev-server --hot --history-api-fallback"
+    "dev": "webpack-dev-server --inline --hot --history-api-fallback"
   },
   "dependencies": {
     "express": "^4.16.2",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "semantic-ui-react": "^0.76.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
