--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "moment": "^2.19.2",
     "mysql2": "^1.5.1",
     "pg": "^7.4.0",
     "pg-hstore": "^2.3.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "rss-to-json": "^1.0.3",
     "semantic-ui-react": "^0.76.0",
     "sequelize": "^4.23.1",
     "whatwg-fetch": "^2.0.3"
