--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "license": "MIT",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
-    "start": "nodemon server.js",
-    "dev": "webpack-dev-server --inline --hot --history-api-fallback"
+    "server": "nodemon server.js",
+    "dev": "webpack-dev-server --inline --hot --history-api-fallback",
+    "start": "concurrently \"yarn dev\" \" yarn server\""
   },
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.4",
+    "cron": "^1.3.0",
     "express": "^4.16.2",
     "moment": "^2.19.2",
     "mysql2": "^1.5.1",
@@ -33,6 +35,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "concurrently": "^3.5.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
